# sentry-options

./: .craft.yml  .envrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  benchmarks.md  mypy.ini  pyproject.toml  repro_fork_segfault.py  setup.cfg  tox.ini
.claude/: implementation.md  settings.json
.claude/skills/add-option/: SKILL.md
.claude/skills/onboard/: SKILL.md
.github/actions/validate-schema/: action.yml
.github/scripts/: bump_sha.py
.github/workflows/: bump-sha.yml  main.yml  release.yml  validate-schema.yml
benchmarks/: README.md
benchmarks/python/: bench_get.py
clients/python/: Cargo.toml  pyproject.toml
clients/python/benches/: bench_has.py  bench_isset.py
clients/python/python/sentry_options/: __init__.py  _core.pyi  gen_stubs.py  testing.py
clients/python/scripts/: check_stubs.py
clients/python/src/: lib.rs
clients/python/tests/: bench_get_test.py  conftest.py  features_test.py  gen_stubs_test.py  options_override_test.py  options_test.py  propagation_test.py
clients/rust/: Cargo.toml
clients/rust/benches/: README.md  features_bench.rs  get_option.rs  isset_bench.rs  options_bench.rs  reload_trace.rs
clients/rust/src/: features.rs  lib.rs  testing.rs
clients/rust/tests/: override_validation.rs
devenv/: sync.py
docs/: architecture.md  integration-guide.md  options.md  setup.md
example/: Cargo.toml
example/python/: main.py
example/rust/.cargo/: config.toml
example/rust/src/: main.rs
example/src/: main.rs
examples/: Dockerfile  README.md  apply-configmap.sh  repos.json
examples/configs/sentry-options-testing/default/: values.yaml
examples/configs/sentry-options-testing/sandbox/: values.yaml
examples/python/: main.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/schemas/sentry-options-testing/: schema.json
examples/schemas/testing/: schema.json
examples/values/sentry-options-testing/: values.json
gocd/pipelines/: new-sentry-options.sh  new-sentry-options.yaml
rust_testing/getsentry/default/: another.yaml  base.yaml
rust_testing/getsentry/s4s/: base.yaml
rust_testing/snuba/default/: base.yaml
schemas/testing/: schema.json
scripts/: bump-version.sh
scripts/migration/: COMPLETE-OPTION-CLASSIFICATION.md  HOW-OPTIONS-WORK.md  MIGRATION-ORDER-PROPOSALS.md  MIGRATION-SUB-TIERS.md  Makefile  README.md  TODO.md  UNUSED-OPTIONS.md  active_options.json  check-seen-options.py  collect-seen-options-out.txt  collect-seen-options.py  delete-options.py  enumerate_active_options.py  inventory.csv  option_inventory.py  options.html  pyproject.toml  safe-to-delete-options.py  safe.txt  seen.txt
sentry-options-cli/: Cargo.toml
sentry-options-cli/src/: loader.rs  main.rs  option_usage.rs  output.rs  repo_schema_config.rs  repos_config.rs  schema_evolution.rs  schema_retriever.rs
sentry-options-gen-stubs/: __init__.py
sentry-options-validation/: Cargo.toml
sentry-options-validation/src/: feature-schema-defs.json  lib.rs  namespace-schema.json
sentry-options/options/testing/default/: base.yaml
sentry-options/schemas/seer-context-engine/: schema.json
sentry-options/schemas/sentry-options-testing/: schema.json
sentry-options/schemas/testing/: schema.json
sentry-options/sentry_options/: __init__.pyi
sentry-options/values/sentry-options-testing/: values.json
sentry_options/: api.py  mypy_plugin.py  testing.py  validate_type.py  write.py
sentry_options/schema/: sentry.py  testing.py
sentry_options_old/: api.py  mypy_plugin.py  testing.py  write.py
sentry_options_old/schema/: _option.py  sentry.py  testing.py
src/: main.rs
stubs/sentry_options/: __init__.pyi
testing/: option_group.py
tests/: api_test.py  gen_stubs_test.py  testing_test.py  validate_type_test.py  write_test.py
tests-typing/: api.py  errors.py
