[workspace]
resolver = "3"
members = [
    "sentry-options-validation",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/getsentry/sentry-options"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
thiserror = "2.0.17"
tempfile = "3.23.0"
jsonschema = "0.36.0"
