[workspace]
resolver = "3"
members = [
    "sentry-options-validation",
    "sentry-options-cli",
    "clients/rust",
    "clients/python",
    "examples/rust",
]

# Python bindings must be built with maturin, not cargo build
default-members = [
    "sentry-options-validation",
    "sentry-options-cli",
    "clients/rust",
    "examples/rust",
]

[workspace.package]
version = "1.1.1"
edition = "2024"
repository = "https://github.com/getsentry/sentry-options"
license = "Apache-2.0"

[workspace.dependencies]
sentry-options-validation = { path = "sentry-options-validation", version = "1.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
thiserror = "2.0.17"
tempfile = "3.23.0"
jsonschema = "0.36.0"
sha1 = "0.10"
arc-swap = "1.9.1"
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }
