[metadata]
name = sentry_options
version = 0.0.0
description = schemas and client libraries for `sentry-options`
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/getsentry/sentry-options
author = Sentry
author_email = oss@sentry.io
license = Apache-2.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.12

[options.packages.find]
exclude =
    tests*
    testing*

[options.extras_require]
typing =
    mypy>=1.17

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
parallel = true

[mypy]
plugins = sentry_options.mypy_plugin
strict = true
