[package]
name = "sentry-options-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sentry-options-validation = { path = "../sentry-options-validation" }
thiserror = "2.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
