[package]
name = "sentry-options-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
sentry-options-validation.workspace = true
thiserror.workspace = true
walkdir = "2.5.0"

[dev-dependencies]
tempfile.workspace = true
