[package]
name = "sentry-options-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "CLI tool for sentry-options for validation of schema and values"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
sentry-options-validation.workspace = true
thiserror.workspace = true
walkdir = "2.5.0"
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
