[package]
name = "sentry-options-validation"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Schema validation library and CLI for sentry-options"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
jsonschema.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[example]]
name = "test_schema"
required-features = []

[features]
default = []
