[package]
name = "sentry-options-validation"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Schema validation library and CLI for sentry-options"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
jsonschema.workspace = true
tempfile.workspace = true
arc-swap.workspace = true
chrono = { version = "0.4.45", features = ["clock"] }

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
