[package]
name = "sentry-options-python"
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
name = "sentry_options_rust"
crate-type = ["cdylib"]

[dependencies]
sentry-options = { path = "../rust" }
pyo3 = { version = "0.27.2", features = ["extension-module"] }
serde_json.workspace = true
