[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "sentry_options"
version = "1.0.6"
description = "Python client for sentry-options using Rust validation"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Sentry", email = "oss@sentry.io" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
dev = ["maturin", "pytest"]

[project.urls]
Homepage = "https://github.com/getsentry/sentry-options"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py311"]
module-name = "sentry_options._core"
# py.typed and _core.pyi are auto-included in wheels via python-source
python-source = "python"
